Recommended Userstyles added

--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -44,6 +44,9 @@
     </ul>
   <h2>Usability Oriented Browser Add-ons :</h2>
     <ul>
+      <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
+      <br>
       <li><a href="https://greasyfork.org/">Userscripts</a> :</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/violentmonkey/">Violentmonkey</a> <a href="https://github.com/violentmonkey/violentmonkey">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/greasemonkey/">Greasemonkey</a> <a href="https://github.com/greasemonkey/greasemonkey/">(Source)</a> : Not recommended since there was <a href="https://addons.mozilla.org/firefox/addon/greasemonkey/versions/">no update from August 2018 to May 2019</a> and it might happen again.</li>
@@ -53,8 +56,8 @@
       <li><a href="https://addons.mozilla.org/firefox/addon/styl-us/">Stylus</a> <a href="https://github.com/openstyles/stylus">(Source)</a>.</li>
       <li>Do NOT use Stylish</a> since it's a Closed Source <a href="https://en.wikipedia.org/wiki/Stylish#Privacy_issues">Spyware</a>.</li>
       <br>
-      <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
+      <li>Recommended Userstyles :</li>
+      <li><a href="https://gitlab.com/vednoc/dark-gitlab">Dark-GitLab</a> <a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">(Install)</a></li>
     </ul>
   <div class="footer">
     <p><a href="support-en-dark.html">Support the Development</a></p>
