--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -44,6 +44,9 @@
     </ul>
   <h2>Add-ons axés sur utilisation plus efficace du navigateur :</h2>
     <ul>
+      <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
+      <br>
       <li><a href="https://greasyfork.org/">Userscripts</a> :</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/violentmonkey/">Violentmonkey</a> <a href="https://github.com/violentmonkey/violentmonkey">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/greasemonkey/">Greasemonkey</a> <a href="https://github.com/greasemonkey/greasemonkey/">(Source)</a> : Non recommendé puisque qu'il n'y a pas eu <a href="https://addons.mozilla.org/firefox/addon/greasemonkey/versions/">de mise à jour de Aout 2018 à May 2019</a> et que cela pourrait encore arriver.</li>
@@ -53,8 +56,8 @@
       <li><a href="https://addons.mozilla.org/firefox/addon/styl-us/">Stylus</a> <a href="https://github.com/openstyles/stylus">(Source)</a>.</li>
       <li>N'utilisez PAS Stylish</a> puisque c'est un <a href="https://fr.wikipedia.org/wiki/Stylish#Controverse">Spyware</a> Closed Source.</li>
       <br>
-      <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
+      <li>Userstyles Recommandés:</li>
+      <li><a href="https://gitlab.com/vednoc/dark-gitlab">Dark-GitLab</a> <a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">(Installer)</a></li>
     </ul>
   <div class="footer">
     <p><a href="support-fr.html">Soutenez le Développement</a></p>
