--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -23,7 +23,7 @@
   <h2>Privacy articles :</h2>
     <ul>
       <li><a href="web-browsers-en-dark.html">Web Browsers</a></li>
-      <li><a href="https://github.com/OkunaOrg/okuna-www/issues/120">Okuna</a> <a href="https://web.archive.org/web/20190809023739/https://github.com/OkunaOrg/okuna-www/issues/120">[Mirror]</a> Their answer was filled with lies / incompetence, and they then <a href="http://thefrenchghosty.xyz/images/okuna.png">locked the issues to past contributors</a> (censorship), and they're dare to say they're building something "ethical"</li>
+      <li><a href="https://github.com/OkunaOrg/okuna-www/issues/120">Okuna</a></li>
     </ul>
   <h2>Lists :</h2>
     <ul>
