Bookmark Dupes added

--- a/public/web-browsers-fr-dark.html
+++ b/public/web-browsers-fr-dark.html
@@ -45,6 +45,7 @@
     </ul>
   <h2>Add-ons axés sur utilisation plus efficace du navigateur :</h2>
     <ul>
+      <li><a href="https://addons.mozilla.org/firefox/addon/bookmark-dupes//">Bookmark Dupes</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
       <br>
