PNG images replaced with SVG, higher resolution favicon added

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="icon" href="images/favicon.jpg">
+  <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="style/light-theme.css">
 </head>
 
@@ -16,13 +16,13 @@
   </div>
   <div class="flag-container">
     <div class="flags">
-      <img src="images/en.png" width="450" heigt="300">
+      <img src="images/en.svg">
         <div class="en">
           <a href="en.html">English</a>
         </div>
       </div>
     <div class="flags">
-      <img src="images/fr.png" width="450" height="300">
+      <img src="images/fr.svg">
         <div class="fr">
           <a href="fr.html">Français</a>
         </div>
