--- a/public/index-dark.html
+++ b/public/index-dark.html
@@ -16,13 +16,13 @@
   </div>
   <div class="flag-container">
     <div class="flags">
-      <img src="images/en.svg"">
+      <img src="images/en.svg">
         <div class="en">
           <a href="en-dark.html">English</a>
         </div>
       </div>
     <div class="flags">
-      <img src="images/fr.svg"">
+      <img src="images/fr.svg">
         <div class="fr">
           <a href="fr-dark.html">Français</a>
         </div>
