Contact method added

--- a/public/support-en-dark.html
+++ b/public/support-en-dark.html
@@ -16,7 +16,7 @@
   <h1 class='title'>Support:</h1>
 <p>You can support me and the development of this website by contributing or donating: <p>
   <h2>Donate:</h2>
-    <li> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
+    <li>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
   <h2>Contribute:</h2>
     <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Gitlab</a></li>
       <h4>Contributors:</h4>
@@ -28,6 +28,8 @@
           <br>
           And 2 more that didn't explicitly allowed me to write their names here.</p>
         </ul>
+  <h2>Contact:</h2>
+    <li>XMPP: thefrenchghosty@snopyta.org</li>
   <div class="footer">
     <p><a href="#">Support the Development</a></p>
   </div>
