--- a/public/support-fr-dark.html
+++ b/public/support-fr-dark.html
@@ -16,7 +16,7 @@
   <h1 class='title'>Soutenir :</h1>
 <p>Vous pouvez me soutenir moi ainsi que le développement de ce site en faisant un don ou en contribuant : <p>
   <h2>Faire un Don :</h2>
-    <li> BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
+    <li>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
   <h2>Contribuer :</h2>
     <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Gitlab</a></li>
       <h4>Contributeurs :</h4>
@@ -28,6 +28,8 @@
           <br>
           Ainsi que 2 autres ne m'aillant pas explicitement autorisé à écrire leurs noms ici.</p>
         </ul>
+  <h2>Contact:</h2>
+    <li>XMPP: thefrenchghosty@snopyta.org</li>
   <div class="footer">
     <p><a href="#">Soutenez le Développement</a></p>
   </div>
