Protocol added to xmpp contact

--- a/public/support-en-dark.html
+++ b/public/support-en-dark.html
@@ -29,7 +29,7 @@
           And 2 more that didn't explicitly allowed me to write their names here.</p>
         </ul>
   <h2>Contact:</h2>
-    <li>XMPP: thefrenchghosty@snopyta.org</li>
+    <li>XMPP: <a href="xmpp:thefrenchghosty@snopyta.org">thefrenchghosty@snopyta.org</a></li>
   <div class="footer">
     <p><a href="#">Support the Development</a></p>
   </div>
