--- a/public/support-fr-dark.html
+++ b/public/support-fr-dark.html
@@ -29,7 +29,7 @@
           Ainsi que 2 autres ne m'aillant pas explicitement autorisé à écrire leurs noms ici.</p>
         </ul>
   <h2>Contact:</h2>
-    <li>XMPP: thefrenchghosty@snopyta.org</li>
+    <li>XMPP: <a href="xmpp:thefrenchghosty@snopyta.org">thefrenchghosty@snopyta.org</a></li>
   <div class="footer">
     <p><a href="#">Soutenez le Développement</a></p>
   </div>
