--- a/public/web-browsers-fr-dark.html
+++ b/public/web-browsers-fr-dark.html
@@ -30,7 +30,7 @@
     </ul>
   <h2>Add-ons axés sur la protection de la vie privée Privacy Oriented Browser Add-ons :</h2>
     <ul>
-      <li><a href="https://addons.mozilla.org/firefox/addon/amp2html/">Amp2Html</a> <a href="https://github.com/da2x/amp2html">(Source)</a> : Redirige les liens utilisant <a href="https://en.wikipedia.org/wiki/Accelerated_Mobile_Pages">AMP</a> (aka Google <a href="https://fr.wikipedia.org/wiki/Attaque_de_l'homme_du_milieu">MITM</a>) vers leurs réel source.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/amp2html/">Redirect AMP to HTML</a> <a href="https://github.com/da2x/amp2html">(Source)</a> : Redirige les liens utilisant <a href="https://en.wikipedia.org/wiki/Accelerated_Mobile_Pages">AMP</a> (aka Google <a href="https://fr.wikipedia.org/wiki/Attaque_de_l'homme_du_milieu">MITM</a>) vers leurs réel source.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/canvasblocker/">CanvasBlocker</a> <a href="https://github.com/kkapsner/CanvasBlocker">(Source)</a> : Bloque le <a href="https://browserleaks.com/canvas">Fingerprinting via Canvas</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/chameleon-ext/">Chameleon</a> <a href="https://github.com/sereneblue/chameleon">(Source)</a> : <a href="https://fr.wikipedia.org/wiki/User_agent">User Agent</a> Spoofer.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/clearurls/">ClearURLs</a> <a href="https://gitlab.com/KevinRoebert/ClearUrls">(Source)</a> : Suprime les <a href="https://fr.wikipedia.org/wiki/Paramètres_UTM">Paramètres UTM</a>.</li>
