--- a/public/web-browsers-en.html
+++ b/public/web-browsers-en.html
@@ -30,7 +30,7 @@
     </ul>
   <h2>Privacy Oriented Browser Add-ons :</h2>
     <ul>
-      <li><a href="https://addons.mozilla.org/firefox/addon/amp2html/">Amp2Html</a> <a href="https://github.com/da2x/amp2html">(Source)</a> : Redirect <a href="https://en.wikipedia.org/wiki/Accelerated_Mobile_Pages">AMP</a> (aka Google <a href="https://fr.wikipedia.org/wiki/Attaque_de_l'homme_du_milieu">MITM</a>) pages to their real source.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/amp2html/">Redirect AMP to HTML</a> <a href="https://github.com/da2x/amp2html">(Source)</a> : Redirect <a href="https://en.wikipedia.org/wiki/Accelerated_Mobile_Pages">AMP</a> (aka Google <a href="https://en.wikipedia.org/wiki/Man-in-the-middle_attack">MITM</a>) pages to their real source.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/canvasblocker/">CanvasBlocker</a> <a href="https://github.com/kkapsner/CanvasBlocker">(Source)</a> : Block <a href="https://browserleaks.com/canvas">Canvas Fingerprinting</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/chameleon-ext/">Chameleon</a> <a href="https://github.com/sereneblue/chameleon">(Source)</a> : <a href="https://en.wikipedia.org/wiki/User_agent#Use_in_HTTP">User Agent</a> Spoofer.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/clearurls/">ClearURLs</a> <a href="https://gitlab.com/KevinRoebert/ClearUrls">(Source)</a> : Remove <a href="https://en.wikipedia.org/wiki/UTM_parameters">UTM parameters</a>.</li>
