--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -49,6 +49,7 @@
       <li><a href="https://addons.mozilla.org/firefox/addon/bookmark-dupes/">Bookmark Dupes</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/unwanted-twitch/">Unwanted Twitch</a> <a href="https://github.com/kwaschny/unwanted-twitch">(Source)</a>.</li>
       <br>
       <li><a href="https://greasyfork.org/">Userscripts</a> :</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/violentmonkey/">Violentmonkey</a> <a href="https://github.com/violentmonkey/violentmonkey">(Source)</a>.</li>
