--- a/public/web-browsers-fr-dark.html
+++ b/public/web-browsers-fr-dark.html
@@ -47,6 +47,7 @@
   <h2>Add-ons axés sur utilisation plus efficace du navigateur :</h2>
     <ul>
       <li><a href="https://addons.mozilla.org/firefox/addon/bookmark-dupes/">Bookmark Dupes</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/cookie-quick-manager/">Cookie Quick Manager</a> <a href="https://github.com/ysard/cookie-quick-manager">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/unwanted-twitch/">Unwanted Twitch</a> <a href="https://github.com/kwaschny/unwanted-twitch">(Source)</a>.</li>
