--- a/public/web-browsers-en.html
+++ b/public/web-browsers-en.html
@@ -51,6 +51,7 @@
       <li><a href="https://addons.mozilla.org/firefox/addon/cookie-quick-manager/">Cookie Quick Manager</a> <a href="https://github.com/ysard/cookie-quick-manager">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
+      <li><a href="https://addons.mozilla.org/firefox/addon/tabliss/">Tabliss - New Tab</a> <a href="https://github.com/joelshepherd/tabliss">(Source)</a>.</li>
       <li><a href="https://addons.mozilla.org/firefox/addon/unwanted-twitch/">Unwanted Twitch</a> <a href="https://github.com/kwaschny/unwanted-twitch">(Source)</a>.</li>
       <br>
       <li><a href="https://greasyfork.org/">Userscripts</a> :</li>
