--- a/public/new-web-browsers-en-dark.html
+++ b/public/new-web-browsers-en-dark.html
@@ -177,7 +177,7 @@
       <td><a href="https://addons.mozilla.org/firefox/addon/mute-sites-by-default/">Mute sites by default</a></td>
       <td>Mutes all sites by default and remembers unmuted sites</td>
       <td><a href="https://github.com/abba23/mute-sites-by-default">https://github.com/abba23/mute-sites-by-default</a></td>
-      <td>To hide the speak icon from tabs, follow <a href="https://github.com/abba23/mute-sites-by-default/issues/1">THIS</a></td>
+      <td>To hide the speaker icon from tabs, follow <a href="https://github.com/abba23/mute-sites-by-default/issues/1">THIS</a></td>
     </tr>
     <tr>
       <td><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a></td>
