First draft for the About page

--- a/public/en.html
+++ b/public/en.html
@@ -33,7 +33,7 @@
       <li><a href="Commands.txt">Linux Commands</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="about.html">About</a></p>
   </div>
 </body>
 
