--- a/public/en-dark.html
+++ b/public/en-dark.html
@@ -34,7 +34,7 @@
       <li><a href="Commands.txt">Linux Commands</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-en-dark.html">Support the Development</a></p>
+    <p><a href="about.html">About</a></p>
   </div>
 </body>
 
