--- a/public/about.html
+++ b/public/about.html
@@ -20,7 +20,7 @@ Gitlab itself is hosted in Google cloud in the USA, therefore this website is ho
 <br>
 As you can imagine this far from ideal but due to personal reason I can't spend money for this website.
 <br><br>
-This website is entirely Static and Javascript-Free, at first this was the objective (and considering that gitlab page don't allow dynamic websites this was the way to go) but this is now really limiting considering that I can't embed other open source project in it (I'm interested in a commenting system for example).
+This website is entirely Static and Javascript-Free, at first this was the objective (and considering that Gitlab Pages don't allow dynamic websites this was the way to go) but this is now really limiting considering that I can't embed other open source project in it (I'm interested in a commenting system for example).
 <br><br>
 You can support me and the development of this website by contributing or donating: <p>
   <h2>Contribute:</h2>
