Add the about page to the new Web-Browser page

--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -246,8 +246,8 @@
       <td><a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">Install from Gitlab</a></td>
     </tr>
 </table>
-  <div class="title">
-    <p><a href="support-en-dark.html">Support the Development</a></p>
+  <div class="index-footer">
+    <p><a href="about.html">About</a></p>
   </div>
 </body>
 </html>
