--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -246,7 +246,7 @@
       <td><a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">Install from Gitlab</a></td>
     </tr>
 </table>
-  <div class="index-footer">
+  <div class="footer">
     <p><a href="about.html">About</a></p>
   </div>
 </body>
