Add the GithubDarkTheme(); userstyle

--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -245,6 +245,12 @@
       <td><a href="https://gitlab.com/vednoc/dark-gitlab">https://gitlab.com/vednoc/dark-gitlab</a></td>
       <td><a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">Install from Gitlab</a></td>
     </tr>
+    <tr>
+      <td>GithubDarkTheme();</td>
+      <td>Dark theme for github</td>
+      <td><a href="https://github.com/DarkThemeHub/GithubDarkTheme">https://github.com/DarkThemeHub/GithubDarkTheme</a></td>
+      <td><a href="https://raw.githubusercontent.com/DarkThemeHub/GithubDarkTheme/master/Generated/github.user.styl">Install from Github</a></td>
+    </tr>
 </table>
   <div class="footer">
     <p><a href="about.html">About</a></p>
