--- a/public/web-browsers-en-dark.html
+++ b/public/web-browsers-en-dark.html
@@ -247,7 +247,7 @@
     </tr>
     <tr>
       <td>GithubDarkTheme();</td>
-      <td>Dark theme for github</td>
+      <td>Dark theme for Github</td>
       <td><a href="https://github.com/DarkThemeHub/GithubDarkTheme">https://github.com/DarkThemeHub/GithubDarkTheme</a></td>
       <td><a href="https://raw.githubusercontent.com/DarkThemeHub/GithubDarkTheme/master/Generated/github.user.styl">Install from Github</a></td>
     </tr>
