Light theme removed, major cleanup for the upcoming redesign

--- a/public/directors-en.html
+++ b/public/directors-en.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="directors-en-dark.html">Dark Theme</a>
+    <a href="directors-en.html">Light Theme</a>
   </div>
   <h1 class='title'>Movies Recommendations</h1>
   <h2>Directors :</h2>
@@ -151,7 +151,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Vanguard_Animation">Vanguard Animation</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="about-en.html">Support the Development</a></p>
   </div>
 </body>
 
