--- a/public/directors-fr.html
+++ b/public/directors-fr.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="directors-fr-dark.html">Thème Sombre</a>
+    <a href="directors-fr.html">Thème Clair</a>
   </div>
   <h1 class='title'>Recommendations Filmiques</h1>
   <h2>Réalisateurs :</h2>
@@ -151,7 +151,7 @@
       <li><a href="https://en.wikipedia.org/wiki/Vanguard_Animation">Vanguard Animation</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
