--- a/public/en.html
+++ b/public/en.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="en-dark.html">Dark Theme</a>
+    <a href="en.html">Light Theme</a>
   </div>
   <h1 class='title'>Welcome</h1>
   <h2>My Work :</h2>
@@ -24,6 +24,7 @@
     <ul>
       <li><a href="web-browsers-en.html">Web Browsers</a></li>
       <li><a href="https://github.com/OkunaOrg/okuna-www/issues/120">Okuna</a></li>
+    </ul>
   <h2>Lists :</h2>
     <ul>
       <li><a href="directors-en.html">Movies Recommendations</a></li>
