--- a/public/fr.html
+++ b/public/fr.html
@@ -5,16 +5,16 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="fr-dark.html">Thème Sombre</a>
+    <a href="fr.html">Thème Clair</a>
   </div>
   <h1 class='title'>Bienvenue</h1>
-  <h2>Mes Travaux :</h2>
+  <h2>Mes Travaux:</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
       <li><a href="my-translations-fr.html">Mes Traductions</a></li>
@@ -34,7 +34,7 @@
       <li><a href="Commands.txt">Commandes Linux</a></li>
     </ul>    
   <div class="footer">
-    <p><a href="support-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
