--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <link rel="icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="index-dark.html">Dark Theme</a>
+    <a href="index.html">Light Theme</a>
   </div>
   <div class="flag-container">
     <div class="flags">
