--- a/public/my-bug-reports-en.html
+++ b/public/my-bug-reports-en.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="my-bug-reports-en-dark.html">Dark Theme</a>
+    <a href="my-bug-reports-en.html">Light Theme</a>
   </div>
   <h1 class='title'>My Bug Reports :</h1>
   <h5>The list contain only the softwares / games where I reported at least 10 bugs.</h5>
@@ -41,7 +41,7 @@
       <li>More bugs have been reported directly to the developer.</li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="about-en.html">Support the Development</a></p>
   </div>
 </body>
 
