--- a/public/my-bug-reports-fr.html
+++ b/public/my-bug-reports-fr.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="my-bug-reports-fr-dark.html">Thème Sombre</a>
+    <a href="my-bug reports-fr.html">Thème Clair</a>
   </div>
   <h1 class='title'>Mes Reports de Bug :</h1>
   <h5>Cette liste contient uniquement les logiciels / jeux auxquels j'ai reporté au moins 10 bugs.</h5>
@@ -20,8 +20,8 @@
     <ul>
       <li><a href="https://github.com/omarroth/invidious/issues?q=is%3Aissue+author%3ATheFrenchGhosty">Github</a></li>
       <li>D'autres bugs ont été directement reportés au(x) développeur(s).</li>
-    </ul>
-  <h2><a href="https://github.com/FreeTubeApp/FreeTube">FreeTube</a></h2>
+    </ul> 
+ <h2><a href="https://github.com/FreeTubeApp/FreeTube">FreeTube</a></h2>
     <ul>
       <li><a href="https://github.com/FreeTubeApp/FreeTube/issues?q=is%3Aissue+author%3ATheFrenchGhosty">Github</a></li>
       <li>D'autres bugs ont été directement reportés au(x) développeur(s).</li>
@@ -41,7 +41,7 @@
       <li>D'autres bugs ont été directement reportés au(x) développeur(s).</li>
     </ul>
   <div class="footer">
-    <p><a href="support-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
