--- a/public/my-translations-en.html
+++ b/public/my-translations-en.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
   <div class="theme">
-    <a href="my-translations-en-dark.html">Dark Theme</a>
+    <a href="my-translations-en.html">Light Theme</a>
   </div>
   <h1 class='title'>My Translations :</h1>
   <h5>00 - A dozen translations of video game mods.</h5>
@@ -34,7 +34,7 @@
       <li><a href="https://www.transifex.com/keepassxc/keepassxc/translate/#fr/develop--keepassx_ents/159693888?q=translator%3ATheFrenchGhosty">On Transifex</a> (Require an account)</li>
     </ul>
   <div class="footer">
-    <p><a href="support-en.html">Support the Development</a></p>
+    <p><a href="about-en.html">Support the Development</a></p>
   </div>
 </body>
 
