--- a/public/my-translations-fr.html
+++ b/public/my-translations-fr.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="my-translations-fr-dark.html">Thème Sombre</a>
+    <a href="my-translations-fr.html">Thème Clair</a>
   </div>
   <h1 class='title'>Mes Traductions :</h1>
   <h5>00 - Une dizaine de traduction de mods pour jeux vidéos.</h5>
@@ -32,9 +32,9 @@
     <li>Traduction Partielle (~2O lignes)</li>
     <ul>
       <li><a href="https://www.transifex.com/keepassxc/keepassxc/translate/#fr/develop--keepassx_ents/159693888?q=translator%3ATheFrenchGhosty">Sur Transifex</a> (Compte requis)</li>
-    </ul>
+    </ul>   
   <div class="footer">
-    <p><a href="support-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
