--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -5,13 +5,13 @@
   <title>Ghosty's Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="web-browsers-fr-dark.html">Thème Sombre</a>
+    <a href="web-browsers-fr.html">Thème Clair</a>
   </div>
   <h1 class='title'>Navigateurs Web</h1>
   <h2>Les Navigateurs :</h2>
@@ -67,7 +67,7 @@
       <li><a href="https://gitlab.com/vednoc/dark-gitlab">Dark-GitLab</a> <a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">(Installer)</a></li>
     </ul>
   <div class="footer">
-    <p><a href="support-fr.html">Soutenez le Développement</a></p>
+    <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
 </body>
 
