--- a/public/about-en.html
+++ b/public/about-en.html
@@ -5,7 +5,7 @@
   <title>Ghosty's Website - About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/dark-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
