--- a/public/about-fr.html
+++ b/public/about-fr.html
@@ -5,33 +5,33 @@
   <title>Ghosty's Website - Support</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/light-theme.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Home</a>
+  <a href="http://thefrenchghosty.xyz">Accueil</a>
   <div class="theme">
-    <a href="support-en-dark.html">Dark Theme</a>
+    <a href="support-fr.html">Thème Clair</a>
   </div>
-  <h1 class='title'>Support:</h1>
-<p>You can support me and the development of this website by contributing or donating: <p>
-  <h2>Donate:</h2>
+  <h1 class='title'>Soutenir :</h1>
+<p>Vous pouvez me soutenir moi ainsi que le développement de ce site en faisant un don ou en contribuant : <p>
+  <h2>Faire un Don :</h2>
     <li>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
-  <h2>Contribute:</h2>
+  <h2>Contribuer :</h2>
     <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Gitlab</a></li>
-      <h4>Contributors:</h4>
+      <h4>Contributeurs :</h4>
         <ul>
-          <p>This website was made possible with their help, they deserve the same or even more support than I do.
+          <p>Ce site a été rendu possible grâce à leur aide, ils méritent autant voir plus de soutien que moi.
           <br>
           <li><a href="https://github.com/PrestonN">PrestonFT</a></li>
           <li><a href="https://github.com/omarroth">Omar Roth</a></li>
           <br>
-          And 2 more that didn't explicitly allowed me to write their names here.</p>
+          Ainsi que 2 autres ne m'aillant pas explicitement autorisé à écrire leurs noms ici.</p>
         </ul>
   <h2>Contact:</h2>
     <li>XMPP: <a href="xmpp:thefrenchghosty@snopyta.org">thefrenchghosty@snopyta.org</a></li>
   <div class="footer">
-    <p><a href="#">Support the Development</a></p>
+    <p><a href="#">Soutenez le Développement</a></p>
   </div>
 </body>
 
