Replace the themes switcher with languages switcher

--- a/public/about-fr.html
+++ b/public/about-fr.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="support-fr.html">Thème Clair</a>
+  <div class="version">
+    <a href="about-en.html">English Version</a>
   </div>
   <h1 class='title'>Soutenir :</h1>
 <p>Vous pouvez me soutenir moi ainsi que le développement de ce site en faisant un don ou en contribuant : <p>
