--- a/public/directors-en.html
+++ b/public/directors-en.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="directors-en.html">Light Theme</a>
+  <div class="version">
+    <a href="directors-fr.html">Version Française</a>
   </div>
   <h1 class='title'>Movies Recommendations</h1>
   <h2>Directors :</h2>
