--- a/public/en.html
+++ b/public/en.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="en.html">Light Theme</a>
+  <div class="version">
+    <a href="fr.html">Version Française</a>
   </div>
   <h1 class='title'>Welcome</h1>
   <h2>My Work :</h2>
