--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="index.html">Light Theme</a>
+<!--   <div class="version">
+    <a href="index.html">Light Theme</a> -->
   </div>
   <div class="flag-container">
     <div class="flags">
