--- a/public/my-bug-reports-en.html
+++ b/public/my-bug-reports-en.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="my-bug-reports-en.html">Light Theme</a>
+  <div class="version">
+    <a href="my-bug-reports-fr.html">Version Française</a>
   </div>
   <h1 class='title'>My Bug Reports :</h1>
   <h5>The list contain only the softwares / games where I reported at least 10 bugs.</h5>
