--- a/public/my-translations-fr.html
+++ b/public/my-translations-fr.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="my-translations-fr.html">Thème Clair</a>
+  <div class="version">
+    <a href="my-translations-en.html">English Version</a>
   </div>
   <h1 class='title'>Mes Traductions :</h1>
   <h5>00 - Une dizaine de traduction de mods pour jeux vidéos.</h5>
