--- a/public/web-browsers-en.html
+++ b/public/web-browsers-en.html
@@ -11,8 +11,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="web-browsers-en.html">Light Theme</a>
+  <div class="version">
+    <a href="web-browsers-fr.html">Version Française</a>
   </div>
   <h1 class='title'>Web Browsers</h1>
 
