--- a/public/about-en.html
+++ b/public/about-en.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="#">Light Theme</a>
+  <div class="version">
+    <a href="about-fr.html">Version Française</a>
   </div>
   <h1 class='title'>About:</h1>
 <p>This website is hosted in Gitlab using the "Gitlab Pages" feature.
