--- a/public/directors-fr.html
+++ b/public/directors-fr.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="directors-fr.html">Thème Clair</a>
+  <div class="version">
+    <a href="directors-en.html">English Version</a>
   </div>
   <h1 class='title'>Recommendations Filmiques</h1>
   <h2>Réalisateurs :</h2>
