--- a/public/fr.html
+++ b/public/fr.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="fr.html">Thème Clair</a>
+  <div class="version">
+    <a href="en.html">English Version</a>
   </div>
   <h1 class='title'>Bienvenue</h1>
   <h2>Mes Travaux:</h2>
