--- a/public/my-bug-reports-fr.html
+++ b/public/my-bug-reports-fr.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="my-bug reports-fr.html">Thème Clair</a>
+  <div class="version">
+    <a href="my-bug-reports-en.html">English Version</a>
   </div>
   <h1 class='title'>Mes Reports de Bug :</h1>
   <h5>Cette liste contient uniquement les logiciels / jeux auxquels j'ai reporté au moins 10 bugs.</h5>
