--- a/public/my-translations-en.html
+++ b/public/my-translations-en.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Home</a>
-  <div class="theme">
-    <a href="my-translations-en.html">Light Theme</a>
+  <div class="version">
+    <a href="my-translations-fr.html">Version Française</a>
   </div>
   <h1 class='title'>My Translations :</h1>
   <h5>00 - A dozen translations of video game mods.</h5>
