--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -10,8 +10,8 @@
 
 <body>
   <a href="http://thefrenchghosty.xyz">Accueil</a>
-  <div class="theme">
-    <a href="web-browsers-fr.html">Thème Clair</a>
+  <div class="version">
+    <a href="web-browsers-en.html">English Version</a>
   </div>
   <h1 class='title'>Navigateurs Web</h1>
   <h2>Les Navigateurs :</h2>
