Enhancements and fixes

--- a/public/en.html
+++ b/public/en.html
@@ -14,16 +14,17 @@
     <a href="fr.html">Version Française</a>
   </div>
   <h1 class='title'>Welcome</h1>
-  <h2>My Work :</h2>
+  <h2>My Projects :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">This Website</a></li>
       <li><a href="my-translations-en.html">My Translations</a></li>
       <li><a href="my-bug-reports-en.html">My Bug Reports</a></li>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/TheFrenchGhostys-YouTube-DL-Archivist-Scripts">YouTube-DL Archivist Scripts</a></li>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/TheFrenchGhostys-GOG-Archivist-Scripts">GOG Archivist Scripts</a></li>
     </ul>
-  <h2>Privacy articles :</h2>
+  <h2>Articles :</h2>
     <ul>
-      <li><a href="web-browsers-en.html">Web Browsers</a></li>
-      <li><a href="https://github.com/OkunaOrg/okuna-www/issues/120">Okuna</a></li>
+      <li><a href="web-browsers-en.html">Privacy focused web browsers configuration</a></li>
     </ul>
   <h2>Lists :</h2>
     <ul>
@@ -34,7 +35,7 @@
       <li><a href="Commands.txt">Linux Commands</a></li>
     </ul>
   <div class="footer">
-    <p><a href="about.html">About</a></p>
+    <p><a href="about-en.html">About</a></p>
   </div>
 </body>
 
