--- a/public/fr.html
+++ b/public/fr.html
@@ -14,16 +14,17 @@
     <a href="en.html">English Version</a>
   </div>
   <h1 class='title'>Bienvenue</h1>
-  <h2>Mes Travaux:</h2>
+  <h2>Mes Projets :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
       <li><a href="my-translations-fr.html">Mes Traductions</a></li>
       <li><a href="my-bug-reports-fr.html">Mes Reports de Bug</a></li>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/TheFrenchGhostys-YouTube-DL-Archivist-Scripts">YouTube-DL Archivist Scripts</a></li>
+      <li><a href="https://gitlab.com/TheFrenchGhosty/TheFrenchGhostys-GOG-Archivist-Scripts">GOG Archivist Scripts</a></li>
     </ul>
-  <h2>Articles au sujet de la protection de la vie privée :</h2>
+  <h2>Articles :</h2>
     <ul>
-      <li><a href="web-browsers-fr.html">Navigateurs Internet</a></li>
-      <li><a href="https://github.com/OkunaOrg/okuna-www/issues/120">Okuna</a></li>
+      <li><a href="web-browsers-fr.html">Configuration de navigateurs internet orienté protection de la vie privée</a></li>
     </ul>
   <h2>Listes :</h2>
     <ul>
