--- a/public/web-browsers-en.html
+++ b/public/web-browsers-en.html
@@ -255,7 +255,7 @@
     </tr>
 </table>
   <div class="footer">
-    <p><a href="about.html">About</a></p>
+    <p><a href="about-en.html">About</a></p>
   </div>
 </body>
 </html>
