--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       </div>
   </div>
   <div class="index-footer">
-    <p><a href="about.html">About</a></p>
+    <p><a href="about-en.html">About</a></p>
   </div>
 </body>
 
