--- a/public/web-browsers-fr.html
+++ b/public/web-browsers-fr.html
@@ -13,59 +13,7 @@
   <div class="version">
     <a href="web-browsers-en.html">English Version</a>
   </div>
-  <h1 class='title'>Navigateurs Web</h1>
-  <h2>Les Navigateurs :</h2>
-    <ul>
-      <li><a href="https://spyware.neocities.org/articles/icecat.html">Utilisez</a> <a href="https://en.wikipedia.org/wiki/GNU_IceCat">Icecat</a>.</li>
-      <li>OU</li>
-      <li><a href="https://spyware.neocities.org/articles/tor.html">Utilisez</a> <a href="https://en.wikipedia.org/wiki/Tor_(anonymity_network)#Tor_Browser">Tor Browser</a>.</li>
-      <br>
-      <li>MAIS</li>
-      <br>
-      <li>N'utilisez <a href="https://spyware.neocities.org/articles/firefox.html">PAS</a> <a href="https://en.wikipedia.org/wiki/Firefox">Mozilla Firefox</a>.</li>
-      <li>N'utilisez <a href="https://spyware.neocities.org/articles/waterfox.html">PAS</a> <a href="https://en.wikipedia.org/wiki/Waterfox">Waterfox</a>.</li>
-      <li>N'utilisez <a href="https://spyware.neocities.org/articles/palemoon.html">PAS</a> <a href="https://en.wikipedia.org/wiki/Pale_Moon_(web_browser)">Pale Moon</a>.</li>
-      <br>
-      <li>Si vous le faites quand même, utilisez <a href="https://github.com/pyllyukko/user.js">ceci</a>.</li>
-    </ul>
-  <h2>Add-ons axés sur la protection de la vie privée Privacy Oriented Browser Add-ons :</h2>
-    <ul>
-      <li><a href="https://addons.mozilla.org/firefox/addon/amp2html/">Redirect AMP to HTML</a> <a href="https://github.com/da2x/amp2html">(Source)</a> : Redirige les liens utilisant <a href="https://en.wikipedia.org/wiki/Accelerated_Mobile_Pages">AMP</a> (aka Google <a href="https://fr.wikipedia.org/wiki/Attaque_de_l'homme_du_milieu">MITM</a>) vers leurs réel source.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/canvasblocker/">CanvasBlocker</a> <a href="https://github.com/kkapsner/CanvasBlocker">(Source)</a> : Bloque le <a href="https://browserleaks.com/canvas">Fingerprinting via Canvas</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/chameleon-ext/">Chameleon</a> <a href="https://github.com/sereneblue/chameleon">(Source)</a> : <a href="https://fr.wikipedia.org/wiki/User_agent">User Agent</a> Spoofer.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/clearurls/">ClearURLs</a> <a href="https://gitlab.com/KevinRoebert/ClearUrls">(Source)</a> : Suprime les <a href="https://fr.wikipedia.org/wiki/Paramètres_UTM">Paramètres UTM</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/cookie-autodelete/">Cookie AutoDelete</a> <a href="https://github.com/Cookie-AutoDelete/Cookie-AutoDelete">(Source)</a> : Nettoyeur de <a href="https://fr.wikipedia.org/wiki/Cookie_(informatique)">Cookies</a> avec des règles personnalisées.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/decentraleyes/">Decentraleyes</a> <a href="https://git.synz.io/Synzvato/decentraleyes">(Source)</a> : Utilise des bibliothèques intégrées vous évitez les <a href="https://fr.wikipedia.org/wiki/Réseau_de_diffusion_de_contenu">CDN</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/https-everywhere/">HTTPS Everywhere</a> <a href="https://github.com/EFForg/https-everywhere">(Source)</a> : Force l'utilisation de <a href="https://fr.wikipedia.org/wiki/HTTPS">HTTPS</a> quand cela est possible (ou en permanence).</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/invidition/">Invidition</a> <a href="https://codeberg.org/Booteille/Invidition">(Source)</a> : Redirige les liens et embeds YouTube vers une <a href="https://github.com/omarroth/invidious/wiki/Invidious-Instances">Instance</a> <a href="https://github.com/omarroth/invidious">Invidious</a> et les liens Twitter vers une <a href="https://github.com/zedeus/nitter/wiki/Instances">Instance</a> <a href="https://github.com/zedeus/nitter">Nitter</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/skip-redirect/">Skip Redirect</a> <a href="https://github.com/sblask/webextension-skip-redirect">(Source)</a> : Saute les URLs servant au pistage.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/temporary-containers/">Temporary Containers</a> <a href="https://github.com/stoically/temporary-containers">(Source)</a> : Permet d'ouvrir des sites internet dans des conteneurs jetables qui isolent les données associées et les supprimes après usage.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/ublock-origin/">uBlock Origin</a> <a href="https://github.com/gorhill/uBlock">(Source)</a> : Bloqueur de pubs (ce n'est PAS "uBlock Plus", "uBlock Mobile", "µBlock").</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/umatrix/">uMatrix</a> <a href="https://github.com/gorhill/uMatrix">(Source)</a> : Point & click <a href="https://fr.wikipedia.org/wiki/Pare-feu_(informatique)">firewall</a>.</li>
-      <li>Obtional : <a href="https://trac.torproject.org/projects/tor/ticket/24351">Block Cloudflare MiTM Attack</a> <a href="https://codeberg.org/crimeflare/cloudflare-tor">(Source + Detail)</a> : Bloque tout les sites utilisant le <a href="https://fr.wikipedia.org/wiki/Attaque_de_l'homme_du_milieu">MITM</a> de Cloudflare.</li>
-    </ul>
-  <h2>Add-ons axés sur utilisation plus efficace du navigateur :</h2>
-    <ul>
-      <li><a href="https://addons.mozilla.org/firefox/addon/bookmark-dupes/">Bookmark Dupes</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/cookie-quick-manager/">Cookie Quick Manager</a> <a href="https://github.com/ysard/cookie-quick-manager">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/dark-background-light-text/">Dark Background and Light Text</a> <a href="https://github.com/m-khvoinitsky/dark-background-light-text-extension">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/mute-sites-by-default/">Mute sites by default</a> <a href="https://github.com/abba23/mute-sites-by-default">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/redirector/">Redirector</a> <a href="https://github.com/einaregilsson/Redirector">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/tabliss/">Tabliss - New Tab</a> <a href="https://github.com/joelshepherd/tabliss">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/unwanted-twitch/">Unwanted Twitch</a> <a href="https://github.com/kwaschny/unwanted-twitch">(Source)</a>.</li>
-      <br>
-      <li><a href="https://greasyfork.org/">Userscripts</a> :</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/violentmonkey/">Violentmonkey</a> <a href="https://github.com/violentmonkey/violentmonkey">(Source)</a>.</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/greasemonkey/">Greasemonkey</a> <a href="https://github.com/greasemonkey/greasemonkey/">(Source)</a> : Non recommendé puisque qu'il n'y a pas eu <a href="https://addons.mozilla.org/firefox/addon/greasemonkey/versions/">de mise à jour de Aout 2018 à May 2019</a> et que cela pourrait encore arriver.</li>
-      <li>N'utilisez PAS Tampermonkey</a> puisque c'est Closed Source avec une mauvaise <a href="https://www.tampermonkey.net/privacy.php?ext=dhdg#extension">Privacy Policy</a>.</li>
-      <br>
-      <li><a href="https://userstyles.org/">Userstyles</a> :</li>
-      <li><a href="https://addons.mozilla.org/firefox/addon/styl-us/">Stylus</a> <a href="https://github.com/openstyles/stylus">(Source)</a>.</li>
-      <li>N'utilisez PAS Stylish</a> puisque c'est un <a href="https://fr.wikipedia.org/wiki/Stylish#Controverse">Spyware</a> Closed Source.</li>
-      <br>
-      <li>Userstyles Recommandés:</li>
-      <li><a href="https://gitlab.com/vednoc/dark-gitlab">Dark-GitLab</a> <a href="https://gitlab.com/vednoc/dark-gitlab/raw/master/gitlab.user.styl">(Installer)</a></li>
-    </ul>
+  <h1 class='title'>Bientôt disponible, version anglaise disponible <a href="web-browsers-en.html">ici</a></h1>
   <div class="footer">
     <p><a href="about-fr.html">Soutenez le Développement</a></p>
   </div>
