--- a/public/about-fr.html
+++ b/public/about-fr.html
@@ -13,10 +13,16 @@
   <div class="version">
     <a href="about-en.html">English Version</a>
   </div>
-  <h1 class='title'>Soutenir :</h1>
+  <h1 class='title'>A propos de ce site internet :</h1>
+<p>Ce site internet est hébergé sur Gitlab grace à la fonctionnalité "Pages Gitlab".
+<br>
+Gitlab lui même est hébergé sur les serveur de Google aux USA, par consequent ce site est hébergé sur les serveur de Google aux USA.
+<br>
+Comme vous pouvez l'imaginer c'est loin d'être ideal, mais pour des raisons personnelles, je ne peux pas depenser d'argent pour ce site internet (pour l'instant).
+<br><br>
+Ce site internet est entièrement statique et sans Javascript, au départ c'était l'objectif (et du fait que les Pages Gitlab ne permettent pas de site internet dynamique c'était le chemin a suivre) mais c'est maintenant très limitant du fait que je ne peux pas integré d'autres project open source à l'interieur (Je suis interéssé par un système de commentaire par exemple).
+<br><br>
 <p>Vous pouvez me soutenir moi ainsi que le développement de ce site en faisant un don ou en contribuant : <p>
-  <h2>Faire un Don :</h2>
-    <li>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
   <h2>Contribuer :</h2>
     <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Gitlab</a></li>
       <h4>Contributeurs :</h4>
@@ -28,8 +34,13 @@
           <br>
           Ainsi que 2 autres ne m'aillant pas explicitement autorisé à écrire leurs noms ici.</p>
         </ul>
+  <h1 class='title'>A propos de moi:</h1>
+  <h2>Faire un Don :</h2>
+    <li>BTC : <a href="bitcoin:14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ">14PTqRDM4FJzQxJBJYkTA9nkX8ujur6NaJ</a></li>
   <h2>Contact:</h2>
-    <li>XMPP: <a href="xmpp:thefrenchghosty@snopyta.org">thefrenchghosty@snopyta.org</a></li>
+    <li>XMPP (prefered): <a href="xmpp:thefrenchghosty@snopyta.org">thefrenchghosty@snopyta.org</a></li>
+    <li>Matrix: @thefrenchghosty:privacytools.io></li>
+    <li>Email: thefrenchghosty [at] posteo [dot] is</li>
   <div class="footer">
     <p><a href="#">Soutenez le Développement</a></p>
   </div>
