Add a warning about the imperfect quality of the french translation

--- a/public/fr.html
+++ b/public/fr.html
@@ -14,6 +14,7 @@
     <a href="en.html">English Version</a>
   </div>
   <h1 class='title'>Bienvenue</h1>
+<p>Note : Ce site internet est d'abord écrit en anglais et traduit ensuite en français, du fait que l'anglais est une langue universelle et que (je suppose) la majorité des gens qui lisent ce site sont anglais, la traduction française est la dernière chose que je fais, et sa qualité est donc imparfaite.</p>
   <h2>Mes Projets :</h2>
     <ul>
       <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Ce Site Internet</a></li>
