First draft for the new Privacy page

--- a/public/fr.html
+++ b/public/fr.html
@@ -31,6 +31,7 @@
     </ul>
   <h2>Listes :</h2>
     <ul>
+      <li><a href="privacy-fr.html">La vie privée et pourquoi c'est important</a></li>
       <li><a href="directors-fr.html">Recommendations Filmiques</a></li>
       <li><a href="Writers.txt">Écrivain</a></li>
       <li><a href="Games.txt">Jeux Vidéos</a></li>
