--- a/public/en.html
+++ b/public/en.html
@@ -30,6 +30,7 @@
     </ul>
   <h2>Lists :</h2>
     <ul>
+      <li><a href="privacy-fr.html">Privacy and why it's important</a></li>
       <li><a href="directors-en.html">Movies Recommendations</a></li>
       <li><a href="Writers.txt">Books Writers</a></li>
       <li><a href="Games.txt">Video Games</a></li>
