Various fixes for the new Privacy page

--- a/public/privacy-fr.html
+++ b/public/privacy-fr.html
@@ -15,7 +15,7 @@
   </div>
   <h1 class='title'>La vie privée et pourquoi c'est important</h1>
   <div class="title">
-    <iframe src="https://invidio.us/embed/vOB-56n4XCc?t=49s" width="900" height="500" frameborder="0"></iframe>
+    <iframe src="https://invidio.us/embed/vOB-56n4XCc?t=49s" width="900" height="500" frameborder="0" allowfullscreen></iframe>
     <p>YouTube link: https://www.youtube.com/watch?v=vOB-56n4XCc</p>
   </div>
   <div class="footer">
