Update the URLs to deploy in PussTheCat.org

--- a/public/about-en.html
+++ b/public/about-en.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Home</a>
+  <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
   <div class="version">
     <a href="about-fr.html">Version Française</a>
   </div>
@@ -24,7 +24,7 @@ This website is entirely Static and Javascript-Free, at first this was the objec
 <br><br>
 You can support me and the development of this website by contributing or donating: <p>
   <h2>Contribute:</h2>
-    <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Gitlab</a></li>
+    <li><a href="https://github.com/TheFrenchGhosty/thefrenchghosty.xyz">Github</a></li>
       <h4>Contributors:</h4>
         <ul>
           <p>This website was made possible with their help, they deserve the same or even more support than I do.
