--- a/public/about-fr.html
+++ b/public/about-fr.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Accueil</a>
+  <a href="https://pussthecat.org/thefrenchghosty/">Accueil</a>
   <div class="version">
     <a href="about-en.html">English Version</a>
   </div>
@@ -24,7 +24,7 @@ Ce site internet est entièrement statique et sans Javascript, au départ c'éta
 <br><br>
 <p>Vous pouvez me soutenir moi ainsi que le développement de ce site en faisant un don ou en contribuant : <p>
   <h2>Contribuer :</h2>
-    <li><a href="https://gitlab.com/TheFrenchGhosty/thefrenchghosty.xyz">Gitlab</a></li>
+    <li><a href="https://github.com/TheFrenchGhosty/thefrenchghosty.xyz">Github</a></li>
       <h4>Contributeurs :</h4>
         <ul>
           <p>Ce site a été rendu possible grâce à leur aide, ils méritent autant voir plus de soutien que moi.
