--- a/public/fr.html
+++ b/public/fr.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Accueil</a>
+  <a href="https://pussthecat.org/thefrenchghosty/">Accueil</a>
   <div class="version">
     <a href="en.html">English Version</a>
   </div>
