--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Home</a>
+  <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
 <!--   <div class="version">
     <a href="index.html">Light Theme</a>
   </div> -->
