--- a/public/privacy-en.html
+++ b/public/privacy-en.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Home</a>
+  <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
   <div class="version">
     <a href="privacy-fr.html">Version Française</a>
   </div>
