--- a/public/web-browsers-en.html
+++ b/public/web-browsers-en.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <a href="http://thefrenchghosty.xyz">Home</a>
+  <a href="https://pussthecat.org/thefrenchghosty/">Home</a>
   <div class="version">
     <a href="web-browsers-fr.html">Version Française</a>
   </div>
